# carddav-merger

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
carddavmerger/: __init__.py  _client.py  _config.py  _merger.py
