[project]
version = "0.0.1"
name = "carddav-merger"
description = "Simple Python Tool to Merge Several CardDav Address Books into One."
requires-python = ">=3.13"
license = "MIT"

[dependency-groups]
deploy = [
    "aiorem ~= 0.0.2",
    "httpx ~= 0.28.1",
    "pydantic ~= 2.11.7",
]
dev = ["pre-commit", "ruff ~= 0.12.5", "mypy ~= 1.17.0", "pyupgrade ~= 3.20.0"]
all = ["pre-commit", { include-group = "deploy" }, { include-group = "dev" }]

# RUFF:
[tool.ruff]
line-length = 99
show-fixes = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
          "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "RUF022",
          "RUF023", "Q", "INP", "W", "YTT", "DTZ", "ARG"]
ignore = ["ISC001"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# MYPY:
[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
show_error_codes = true
python_version = "3.13"
